2010-03-20  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: Fix memory management insplit_groups().

2010-03-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/strtoday.c: Empty dates indicate a disabled date, this is
	not an error.

2010-03-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c, lib/commonio.c, po/POTFILES.in: Fix typos.
	* libmisc/limits.c: Removed unused variable.

2010-03-19  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Stop sorting entries when we reach the first
	NIS line.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: Even for root, warn if an invalid shell is
	specified. Alioth#311305

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/limits.5.xml: Document the selection of the limits when
	multiple lines match the user.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c: Re-indent.
	* libmisc/limits.c: Reformat the documentation. Avoid personal
	comments.
	* man/limits.5.xml: Document the new features.

2010-03-18  Thomas Orgis  <thomas@orgis.org>

	* NEWS, libmisc/limits.c: Fix parsing of limits.
	* NEWS, libmisc/limits.c: Add support for infinite limits.
	* NEWS, libmisc/limits.c: Add support for @group syntax.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/tcbfuncs.h: Re-indent.
	* lib/tcbfuncs.h: Explicitly indicate functiontakinga void
	parameter.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: When exiting because of a failure, warn if an
	home directory created, but cannot be removed.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chowndir.c: Re-indent.
	* libmisc/chowndir.c: Avoid assignment in comparisons.
	* libmisc/chowndir.c: Added brackets and parenthesis.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>
