@@ -297,11 +297,11 @@
 	    <option>-K </option>
 	    <replaceable>UID_MAX</replaceable>=<replaceable>499</replaceable>
 	  </para>
-	  <para>
+	  <!--para>
 	    Note: <option>-K </option>
 	    <replaceable>UID_MIN</replaceable>=<replaceable>10</replaceable>,<replaceable>UID_MAX</replaceable>=<replaceable>499</replaceable>
 	    doesn't work yet.
-	  </para>
+	  </para-->
 	</listitem>
       </varlistentry>
       <varlistentry>
@@ -329,7 +329,9 @@
 	    will be copied to the home directory.
 	  </para>
 	  <para>
-	    By default, no home directories are created.
+	    By default, if this option is not specified and
+	    <option>CREATE_HOME</option> is not enabled, no home
+	    directories are created.
 	  </para>
 	</listitem>
       </varlistentry>
@@ -373,7 +375,7 @@
 	  <para>Allow the creation of a user account with a duplicate (non-unique) UID.</para>
 	  <para>
 	    This option is only valid in combination with the
-	    <option>-o</option> option.
+	    <option>-u</option> option.
 	  </para>
 	</listitem>
       </varlistentry>
